--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,12 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 3
+    assignees:
+      - "code-reviewers" 
   - package-ecosystem: "terraform"
     directory: "/"
     schedule:
       interval: "weekly"
+    assignees:
+      - "code-reviewers" 
